nerdsMicrofinance/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ussd-demo
  labels:
    app: ussd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ussd-demo
  template:
    metadata:
      labels:
        app: ussd-demo
    spec:
      containers:
      - name: ussd-demo
        image: gcr.io/bamboo-insight-254/ussd-demo:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 256Mi
        ports:
        - containerPort: 8080
