nerdsMicrofinance/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ussd-demo-ingress
  namespace: ussd-demo
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: ussd-demo.pdnlabs.com
spec:
  rules:
  - host: ussd-demo.pdnlabs.com
    http:
      paths:
      - backend:
          serviceName: ussd-demo
          servicePort: web
  tls:
    - secretName: pdnlabs-com-tls
---

kind: Service
apiVersion: v1
metadata:
  name: ussd-demo
  namespace: ussd-demo
spec:
  selector:
    app: ussd-demo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
